--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <small class="form-text text-muted">Digite somente numeros</small>
             </div>
-            <button type="button" class="btn btn-info">Validar !</button>
+            <button type="button" onclick="validacao_CPF()" class="btn btn-info">Validar !</button>
         </form>
     </div>
     <div class="container page-header">
