Criando Logs de Validação verdadeiro e falso

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <div class="form-group">
                 <div class="input-group input-group-lg">
                     <span class="input-group-addon" id="sizing-addon1">CPF</span>
-                    <input id="CPF_dig" type="text" class="form-control" placeholder="Digite o cpf para validação ..."
+                    <input id="digitado" type="text" class="form-control" placeholder="Digite o cpf para validação ..."
                         aria-describedby="sizing-addon1">
                 </div>
                 <small class="form-text text-muted">Digite somente numeros</small>
             </div>
-            <button type="button" onclick="validacao_CPF(value)" class="btn btn-info">Validar !</button>
+            <button type="button" onclick="obterDados(value)" class="btn btn-info">Validar !</button>
         </form>
     </div>
     <div class="container page-header">
