--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"></script>
-
+<footer class="container">
+        <p>Codigo com bootstrap e validador via JS</p>
+        <p>Desenvolvido por: Jonas Barros</p>
+    </footer>
 <script src="./script.js"></script> <!--Integração -->
 
 </html>
